# opensource-llm-rag-chat

./: README.md  app.py  pyproject.toml  setup_ollama.py
containerize/: Dockerfile  entrypoint.sh
index/faiss_index/: index.faiss  index.pkl
src/: create_vectorstore.py  prompts.py  rag.py  test_rag.py  test_vectorstore.py
